[package]
name = "cerberus"
version = "0.0.1"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2018"

license = "MIT"
description = "An EventStore administration tool"
repository = "https://github.com/YoEight/cerberus"
keywords = ["database", "eventstore"]

categories = ["database"]


[dependencies]
eventstore = "0.4"
futures = "0.1"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
reqwest = "0.9"
base64 = "0.10"
