[package]
name = "cerberus-es"
version = "0.0.2"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2018"

license = "MIT"
description = "An EventStore administration tool"
repository = "https://github.com/YoEight/cerberus"
readme = "README.md"
keywords = ["database", "eventstore", "event", "ges", "eventsourcing"]

categories = ["database"]

[[bin]]
name = "cerberus"
path = "src/main.rs"

[dependencies]
eventstore = "0.4"
futures = "0.1"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
reqwest = "0.9"
base64 = "0.10"
